# BotInterface

./: .gitignore  README.md  meson.build
headers/: mainWindow.h  pageControl.h  pageSettings.h  pageStats.h  shared.h
headers/encryption/: crypto.h
headers/io/: jsonio.h
headers/network/: receiver.h  sender.h
headers/ui/: mainWindow.h  pageControl.h  pageLogin.h  pageSettings.h
lib/: README
resources/: gtk-dark.css  gtk.css
src/: main.cpp  mainWindow.cpp  pageControl.cpp  pageSettings.cpp  pageStats.cpp  shared.cpp
src/encryption/: crypto.cpp
src/io/: jsonio.cpp
src/network/: receiver.cpp  sender.cpp
src/ui/: mainWindow.cpp  pageControl.cpp  pageLogin.cpp  pageSettings.cpp  pageStats.cpp
